20060715:  version 0.9.1 (not yet released):
           * make sure llcrnrlat and llcrnrlon are not at poles for mercator.
           * use Eric Firing's new quiver in Basemap quiver method.
           * interp functions now work with masked arrays.
           * added some sanity checks for projection parameters.
           * change from classic to new-style classes.
20060609:  version 0.9:
           * updated for new matplotlib aspect ratio handling.
           Now maps will always have the correct aspect ratio.
           * if resolution keyword is set to None when Basemap
           instance is created, no boundary data sets are needed
           (methods to draw boundaries, like drawcoastlines, will 
           raise an exception).
           * update to proj4 module - renamed pyproj to avoid 
           conflicts with proj4 module from CDAT.
           * createfigure method deprecated, since maps
           will now automatically have the correct aspect ratio.
           * Added new projections Xpstere, Xplaea, Xpaeqd (where X
           can be n or s).  These are special-case, polar-centric
           versions of the stereographic, lambert azimuthal equal area
           and azimuthal equidistant projections that don't require
           you specify the lat/lon values of the lower-left and upper-right
           corners.  
           * fixed bugs in plot, scatter and mapboundary methods for
           miller, cylindrical and mercator projections.
           * 'crude' and 'low' resolution boundary datasets now installed
           by default.  basemap_data package now only needed for to get
           'intermediate' and 'high' resolution datasets.
           * moved all packages under single lib/ directory so
	   setuptools' "develop" command works properly.
           * Added sinusoidal projection.
           * bilinear interpolation routines can return masked arrays with
           values outside range of data coordinates masked.